--- a/cliente.html
+++ b/cliente.html
@@ -14,7 +14,7 @@
         <img src="../img/cliente.png" style="width: 100px;padding-left: 10px;">
     <h1 class="titulo">Consulta de la tabla Cliente</h1>
     <div class="volver">
-        <a class="botonvolver" href="../menu.html">Volver</a>
+        <a class="botonvolver" href="menu.html">Volver</a>
     </div>
     </header>
 
