--- a/mensaje.html
+++ b/mensaje.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>
-        <img src="../img/mensaje.png" style="width: 160px;padding-left: 0px;">
+        <img src="img/mensaje.png" style="width: 160px;padding-left: 0px;">
     <h1 class="titulo"><center>Consulta de la tabla Mensaje</center></h1>
     <div class="volver">
-        <a class="botonvolver" href="../menu.html">Volver</a>
+        <a class="botonvolver" href="menu.html">Volver</a>
     </div>
     </header>
 
