--- a/costumer.html
+++ b/costumer.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/disfraz.png" style="width: 100px;padding-left: 10px;">
+        <img src="img/disfraz.png" style="width: 100px;padding-left: 10px;">
     <h1 class="titulo">Consulta de la tabla Disfraz</h1>
     <div class="volver">
         <a class="botonvolver" href="menu.html">Volver</a>
